// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button size=\\"md\\" isFullWidth />
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text textAlign=\\"center\\" className=\\"text-red-500\\">
    {'Hello world'}
  </Text>
</Frame>;
"
`;
